--- a/app/views/link_requests/index.html.erb
+++ b/app/views/link_requests/index.html.erb
@@ -11,6 +11,8 @@
       <th>Research proposal</th>
       <th>Patient org</th>
       <th>Fonds</th>
+      <th>Date Request in</th>
+      <th>Sterrenlink sent at</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +26,8 @@
         <td><%= link_request.research_proposal %></td>
         <td><%= link_request.patient_org %></td>
         <td><%= link_request.fonds %></td>
+        <td><%= link_request.application_date %></td>
+        <td><%= link_request.sterrenlink_sent_at %></td>
         <td><%= link_to 'Show', link_request %></td>
         <td><%= link_to 'Edit', edit_link_request_path(link_request) %></td>
         <td><%= link_to 'Destroy', link_request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
