--- a/app/views/link_requests/show.html.erb
+++ b/app/views/link_requests/show.html.erb
@@ -7,6 +7,8 @@ Research proposal: <%= @link_request.research_proposal %>
 <p><%= @link_request.researcher_email %></p> todo: copy_emailadres
 <p><%= @link_request.patient_org %></p>
 <p><%= @link_request.fonds %></p>
+<p><%= @link_request.application_date %></p>
+<p><%= @link_request.sterrenlink_sent_at %></p>
 
 <p>
   <strong>Patient org:</strong>
