--- a/app/views/link_requests/_form.html.erb
+++ b/app/views/link_requests/_form.html.erb
@@ -46,9 +46,9 @@
       <%= f.datetime_select :application_date %>
     </div>
 
-    <!--Sterrenlink sent at will be set automatically-->
+    <!--TO DO Sterrenlink sent at will be set automatically-->
 
-    <!--<div class="actions">-->
+    <!--WAS: <div class="actions">-->
     <div>
       <%= f.button "Add as link request", class: 'button' %>
     </div>
