--- a/app/views/sterrenlinks/index.html.erb
+++ b/app/views/sterrenlinks/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Sterrenlinks#index</h1>
 
+<!--the links for a particular link_request; should be no more than one-->
+<% @sterrenlinks.each do |link| %>
+<p><%= link.id %></p>
+<p><%= link.output_link %></p>
+    <%#= %>
+<%#= %>
+<%#= %>
+<% end %>
