--- a/app/views/sterrenlinks/index.html.erb
+++ b/app/views/sterrenlinks/index.html.erb
@@ -2,9 +2,8 @@
 
 <!--the links for a particular link_request; should be no more than one-->
 <% @sterrenlinks.each do |link| %>
-<p><%= link.id %></p>
-<p><%= link.output_link %></p>
-    <%#= %>
+<p><%= link.id %>: <%= link.output_link %></p>
+<%#= %>
 <%#= %>
 <%#= %>
 <% end %>
