--- a/app/views/sterrenlinks/index.html.erb
+++ b/app/views/sterrenlinks/index.html.erb
@@ -3,6 +3,7 @@
 <!--the links for a particular link_request; should be no more than one-->
 <% @sterrenlinks.each do |link| %>
 <p><%= link.id %>: <%= link.output_link %></p>
+    link.id
 <%#= %>
 <%#= %>
 <%#= %>
