--- a/app/views/link_requests/index.html.erb
+++ b/app/views/link_requests/index.html.erb
@@ -28,6 +28,7 @@
         <td><%= link_request.fonds %></td>
         <td><%= link_request.application_date.to_s(:short) %></td>
         <td><%= link_request&.sterrenlink_sent_at&.to_s(:short) %></td>
+        <td><%= link_to "Edit", edit_link_request_path(link_request) %></td>
         <td><%= link_to 'Show', link_request %></td>
         <td><%= link_to 'Destroy', link_request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 
