Remove article in email bodies
 Tweaks for #19

--- a/app/views/link_mailer/send_link.html.erb
+++ b/app/views/link_mailer/send_link.html.erb
@@ -34,7 +34,7 @@
 <p>Bericht voor <%= @pv %></p>
 
 <p>Beste mensen,</p>
-<p>U ontvangt hierbij een "Sterrenlink" voor bovengenoemd onderzoeksvoorstel. De roze link onder aan dit bericht geeft u toegang tot een online vragenlijst. U krijgt vragen over het onderzoek en hoe de samenwerking met de onderzoekers naar de mening van de patiëntenvereniging is verlopen.</p>
+<p>U ontvangt hierbij een "Sterrenlink" voor bovengenoemd onderzoeksvoorstel. De link onder aan dit bericht geeft u toegang tot de online Sterrenscore vragenlijst. U krijgt vragen over het onderzoek en hoe de samenwerking met de onderzoekers naar de mening van de patiëntenvereniging is verlopen.</p>
 
 <p>De vragenlijst is bedoeld om in te vullen NADAT u als patiëntenvereniging het onderzoeksvoorstel besproken heeft, met elkaar en liefst ook met de onderzoeker. Het aantal sterren - de Sterrenscore - wordt automatisch berekend.
   Tijdens het invullen van de vragenlijst kunt u terugbladeren naar eerdere vragen en uw antwoorden aanpassen. Totdat u op de knop "Verzenden" klikt.
