--- a/app/views/link_mailer/send_link.text.erb
+++ b/app/views/link_mailer/send_link.text.erb
@@ -1,2 +1,63 @@
-Groeten van Maud
-<%= @link_voor_pv %>
+
+* Deze email is geoptimaliseerd voor html. U leest de versie zonder html ***
+
+Beste Onderzoeker,
+
+U ontvangt deze mail omdat u een Sterrenlink hebt
+aangevraagd op www.sterrenscore.nl voor <%= @oz %>
+
+
+Onderaan deze mail staat de Sterrenlink.
+Die stuurt u door naar de <%= @pv %>.
+
+
+De <%= @pv %> krijgt met de link toegang tot een online vragenlijst,
+waarmee de Sterrenscore automatisch wordt bepaald.
+U ontvangt een pdf met deze score; de pdf stuurt u mee naar het fonds, samen met uw aanvraag/onderzoeksvoorstel. Afspraken over de datum waarop u de Sterrenscore nodig heeft, maakt u direct met de patiëntenvereniging.
+Houd er alstublieft rekening mee dat het verwerken van de score tijd kost;
+maximaal 48 uur tussen het moment dat de patiëntenvereniging
+de score verstuurt, en dat u de pdf ontvangt.
+
+Hieronder vindt u ook een korte toelichting voor de <%= @pv %>, om mee te sturen met de Sterrenlink.
+
+
+Als u nog vragen heeft over de gang van zaken rond de Sterrenlink
+of de Sterrenscore, aarzel dan niet om contact op te nemen.
+Voor vragen hoe het Revalidatiefonds de Sterrenscore inzet,
+kunt u beter direct met het fonds contact opnemen.
+
+----------------------------------------------------
+
+Onderzoeker: <%= @applicant %>
+
+Onderzoek: <%= @oz %>
+
+Bericht voor <%= @pv %>
+
+Beste mensen,
+
+U ontvangt hierbij een "Sterrenlink" voor bovengenoemd onderzoeksvoorstel. Door op de link onder aan dit bericht te klikken krijgt u toegang tot een online vragenlijst. U krijgt vragen over het onderzoek en hoe de samenwerking met de onderzoekers naar de mening van de patiëntenvereniging is verlopen.
+
+De vragenlijst is bedoeld om in te vullen NADAT u als patiëntenvereniging het onderzoeksvoorstel besproken heeft, met elkaar en liefst ook met de onderzoeker. Het aantal sterren - de Sterrenscore - wordt automatisch berekend. Tijdens het invullen van de vragenlijst kunt u terugbladeren naar eerdere vragen en uw antwoorden aanpassen. Totdat u op de knop "Verzenden" klikt.
+
+Binnen 48 uur na het indienen van de Sterrenscore ontvangen u en de onderzoeker een pdf met daarin een samenvatting van de Sterrenscore.
+
+Meer informatie over de Sterrenscore vindt u op www.sterrenscore.nl
+
+DEZE LINK brengt u DIRECT NAAR DE VRAGENLIJST:
+
+<%= @link_for_pv %>
+
+Voor vragen over de vragenlijst of hulp bij het invullen kunt u mailen naar maudcharta@gmail.com. U kunt ook mailen om een afspraak te maken voor een telefonische toelichting.
+
+Met vriendelijke groet,
+
+Maud de Vries
+
+*****************
+
+www.sterrenscore.nl
+
+*****************
+
+***** Verstuurd door de vriendelijke Sterrenscore Robot *****
