Improvements in email templates

--- a/app/views/link_mailer/send_link.html.erb
+++ b/app/views/link_mailer/send_link.html.erb
@@ -5,17 +5,17 @@
 
 
 <p>Onderaan deze mail staat de Sterrenlink.
-  Die stuurt u door naar de <%= @pv %>.</p>
+  Die stuurt u door naar <%= @pv %>.</p>
 
 
-<p>De <%= @pv %> krijgt met de link toegang tot een online vragenlijst,
+<p>De link geeft <%= @pv %> toegang tot een online vragenlijst,
   waarmee de Sterrenscore automatisch wordt bepaald.</p>
 <p>U ontvangt een pdf met deze score; de pdf stuurt u mee naar het fonds, samen met uw aanvraag/onderzoeksvoorstel. Afspraken over de datum waarop u de Sterrenscore nodig heeft, maakt u direct met de patiëntenvereniging.
 </p>
 <p>Houd er alstublieft rekening mee dat het verwerken van de score tijd kost;
   maximaal 48 uur tussen het moment dat de patiëntenvereniging
   de score verstuurt, en dat u de pdf ontvangt.</p>
-<p>Hieronder vindt u ook een korte toelichting voor de <%= @pv %>, om mee te sturen met de Sterrenlink.</p>
+<p>Hieronder vindt u ook een korte toelichting voor <%= @pv %>.</p>
 
 
 <p>Als u nog vragen heeft over de gang van zaken rond de Sterrenlink
@@ -45,7 +45,7 @@
 
 <p><strong>*** Ga naar de <%= link_to 'Sterrenscore vragenlijst', @link_for_pv %>*** </strong></p>
 
-<p>Voor vragen over de vragenlijst of hulp bij het invullen kunt u mailen naar maudcharta@gmail.com. U kunt ook mailen om een afspraak te maken voor een telefonische toelichting.
+<p>Voor vragen over de vragenlijst of hulp bij het invullen kunt u mailen naar <%= message.from %>. U kunt ook mailen om een afspraak te maken voor een telefonische toelichting.
 
 <p>Met vriendelijke groet,</p>
 
