--- a/app/views/link_mailer/send_link.text.erb
+++ b/app/views/link_mailer/send_link.text.erb
@@ -1,5 +1,5 @@
 
-* Deze email is geoptimaliseerd voor html. U leest de versie zonder html ***
+* Deze email is geoptimaliseerd voor html. U leest de versie zonder html *
 
 Beste Onderzoeker,
 
@@ -8,17 +8,18 @@ aangevraagd op www.sterrenscore.nl voor <%= @oz %>
 
 
 Onderaan deze mail staat de Sterrenlink.
-Die stuurt u door naar de <%= @pv %>.
+Die stuurt u door naar <%= @pv %>.
 
 
-De <%= @pv %> krijgt met de link toegang tot een online vragenlijst,
+Met de link krijgt <%= @pv %> toegang tot een online vragenlijst,
 waarmee de Sterrenscore automatisch wordt bepaald.
-U ontvangt een pdf met deze score; de pdf stuurt u mee naar het fonds, samen met uw aanvraag/onderzoeksvoorstel. Afspraken over de datum waarop u de Sterrenscore nodig heeft, maakt u direct met de patiëntenvereniging.
+U ontvangt een pdf met deze score; de pdf stuurt u mee naar het fonds, samen met uw aanvraag/onderzoeksvoorstel.
+Afspraken over de datum waarop u de Sterrenscore nodig heeft, maakt u direct met de patiëntenvereniging.
 Houd er alstublieft rekening mee dat het verwerken van de score tijd kost;
 maximaal 48 uur tussen het moment dat de patiëntenvereniging
 de score verstuurt, en dat u de pdf ontvangt.
 
-Hieronder vindt u ook een korte toelichting voor de <%= @pv %>, om mee te sturen met de Sterrenlink.
+Hieronder vindt u ook een korte toelichting voor <%= @pv %>.
 
 
 Als u nog vragen heeft over de gang van zaken rond de Sterrenlink
@@ -48,7 +49,7 @@ DEZE LINK brengt u DIRECT NAAR DE VRAGENLIJST:
 
 <%= @link_for_pv %>
 
-Voor vragen over de vragenlijst of hulp bij het invullen kunt u mailen naar maudcharta@gmail.com. U kunt ook mailen om een afspraak te maken voor een telefonische toelichting.
+Voor vragen over de vragenlijst of hulp bij het invullen kunt u mailen naar <%= message.from %>. U kunt ook mailen om een afspraak te maken voor een telefonische toelichting.
 
 Met vriendelijke groet,
 
@@ -60,4 +61,4 @@ www.sterrenscore.nl
 
 *****************
 
-***** Verstuurd door de vriendelijke Sterrenscore Robot *****
+* Verstuurd door de vriendelijke Sterrenscore Robot *
