--- a/app/views/sterrenlinks/show.html.erb
+++ b/app/views/sterrenlinks/show.html.erb
@@ -1,3 +1,3 @@
-SHOW me your sterrrenlink
+SHOW me your sterrenlink
 
-<p><%= @sterrenlink.output_link %></p>
+<p><%= @sterrenlink.id %>: <%= @sterrenlink.output_link %></p>
