--- a/app/views/sterrenlinks/show.html.erb
+++ b/app/views/sterrenlinks/show.html.erb
@@ -1,3 +1,10 @@
 SHOW me your sterrenlink
 
 <p><%= @sterrenlink.id %>: <%= @sterrenlink.output_link %></p>
+
+<%= button_to "Send Sterrenlink", ready_to_send_link_request_sterrenlink_path([@sterrenlink.link_request, @sterrenlink]), class:'button'%>
+
+
+<p><%= link_to "Back to LinkRequest", @link_request %></p>
+
+<%= link_to "Send Sterrenlink now", [:ready_to_send, @sterrenlink.link_request, @sterrenlink], method: :post %>
