--- a/app/views/link_requests/index.html.erb
+++ b/app/views/link_requests/index.html.erb
@@ -39,4 +39,4 @@
 
 <br>
 
-<%= link_to 'New Link Request', new_link_request_path %>
+<%= link_to 'New Link Request', new_link_request_path, class: "button" %>
